# python_magnetgeo

./: .gitignore  .travis.yml  AUTHORS.md  BREAKING_CHANGES.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  LOGGING_IMPLEMENTATION.md  Makefile  README.add_shape  README.md  README.rst  SINGULARITY.md  Singularity.def  api_breaking_changes.md  archive.sh  build-singularity.sh  example_helix_visualization.py  example_insert_visualization.py  example_visualization.py  pyproject.toml  pytest.ini  requirements.txt  settings.env  setup.cfg  setup.py  start-venv.sh  test-refactor-ing.py  test-refactor-tierod.py  test_get_required_files.py  test_helix_refactor.py  test_helix_visualization.py  test_helix_yaml_loading.py  test_insert_refactor.py  test_insert_visualization.py  test_msite_refactor.py  test_phase4.py  test_phase4_leads.py  test_refactor_bitter.py  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pytest.yml
data/: 03032015J_H2.yaml  HL-31.yaml  HL-31_H1.yaml  HL-31_H10.yaml  HL-31_H11.yaml  HL-31_H12.yaml  HL-31_H13.yaml  HL-31_H14.yaml  HL-31_H1_shapes.yaml  HL-31_H2.yaml  HL-31_H2_shapes.yaml  HL-31_H3.yaml  HL-31_H3_shapes.yaml  HL-31_H4.yaml  HL-31_H4_shapes.yaml  HL-31_H5.yaml  HL-31_H5_shapes.yaml  HL-31_H6.yaml  HL-31_H6_shapes.yaml  HL-31_H7.yaml  HL-31_H8.yaml  HL-31_H9.yaml  Readme.md  Ring-H1H2.yaml  template-gmsh-suprastruct.py  template-hts.mustache  test.py
debian/: changelog  control  copyright  rules  watch
debian/source/: options
debian/tests/: control
debian/upstream/: metadata
docs/: Makefile  conf.py  dependency_analysis.md  index.rst  installation.rst  lazy_loading.md  logging.md  make.bat  modules.rst  python_magnetgeo.hts.rst  python_magnetgeo.rst  usage.rst
examples/: helix-cut.py  load_profile_from_dat.py  logging_examples.py  probe_usage_examples.txt  test-yamlload.py
new-tests/: README.md  conftest.py  test_core_classes.py  test_probe_integration.py  test_serialization.py  test_utils.py
new_tests/: test_geometric_operations.py  test_integration.py
prompts/: aliases.md  fixed_base_classes.md  medium_priority_tasks.md  step_by_step_implementation.md
python_magnetgeo/: Bitter.py  Bitters.py  Chamfer.py  Contour2D.py  CurrentLead.py  Groove.py  Helix.py  InnerCurrentLead.py  Insert.py  MSite.py  Model3D.py  ModelAxi.py  OuterCurrentLead.py  Probe.py  Profile.py  Ring.py  Screen.py  Shape.py  Shape2D.py  Site.py  Supra.py  SupraStructure.py  Supras.py  __init__.py  base.py  cli.py  coolingslit.py  deserialize.py  enums.py  hcuts.py  logging_config.py  python_magnetgeo.py  tierod.py  utils.py  validation.py  visualization.py  volumes.py  xao.py
python_magnetgeo/examples/: FEATURE_DRY_RUN_ANALYSIS.md  README.md  __init__.py  check_magnetgeo_yaml.py  create_H1.py  example_dependency_analysis.py  helix-cut.py  hts.json  lazy_loading_demo.py  load_profile_from_dat.py  logging_examples.py  probe_example.py  probe_usage_python.py  quick_reference_get_required_files.py  split_helix_yaml.py  yaml_json_roundtrip.py
python_magnetgeo/hts/: __init__.py  dblpancake.py  double_pancake.py  hts_insert.py  isolation.py  pancake.py  tape.py
scripts/: upgrade-magnetgeo-1.0.0.sh
tests/: Helix-v0.yaml  __init__.py  conftest.py  test-refactor-ring.py  test-yaml.py  test_Bitter.py  test_Helix.py  test_auto_registration.py  test_bitter.py  test_bitters.py  test_chamfer.py  test_coolingslit.py  test_core_classes.py  test_get_required_files.py  test_groove.py  test_helix.py  test_helix_refactor.py  test_innercurrentlead.py  test_insert.py  test_insert_refactor.py  test_insert_validation.py  test_integration.py  test_leads.py  test_magnet_collections.py  test_magnet_refactor.py  test_model3d.py  test_model3d_refactor.py  test_modelaxi.py  test_msite.py  test_msite_refactor.py  test_nested_loading.py  test_outercurrentlead.py  test_path_resolution.py.new  test_phase4.py  test_phase4_leads.py  test_probe.py  test_profile.py  test_python_magnetgeo.py  test_refactor_bitter.py  test_refactor_bitters.py  (+16 more)
tests.cfg/: BSCCO.yaml  bitter1.yaml  bitters1.yaml  chamfer1.yaml  conftest.py  contour2d1.yaml  create_test_fixtures.py  groove1.yaml  helix1.yaml  helix2.yaml  helix3.yaml  inner_lead.yaml  insert1.yaml  lead1.yaml  model3d1.yaml  modelaxi1.yaml  msite1.yaml  probe_ref2.yaml  rectangular.yaml  ring1.yaml  ring2.yaml  shape1.yaml  supra1.yaml  test_core_classes.py  test_geometric_operations.py  test_integration.py  test_magnet_collections.py  test_probe_integration.py  test_serialization.py  test_utils.py
tests.old/: HTS.json  conftest.py  coolingslit1.yaml  create_test_fixtures.py  helix1.yaml  helix3.yaml  inner.yaml  inner_lead.yaml  lead1.yaml  probe_ref1.yaml  supras1.yaml  test_core_classes.py  test_geometric_operations.py  test_integration.py  test_magnet_collections.py  test_probe_integration.py  test_serialization.py  test_utils.py  test_yaml_constructors.py  tierod1.yaml
tests/hts/: test_tape.py
